--- a/180507_cover.html
+++ b/180507_cover.html
@@ -2,12 +2,14 @@
 <html lang="en">
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>写経｜180507 ほぼ初対面</title>
-       <link rel="stylesheet" href="css.css">
+    <link rel="stylesheet" href="css.css">
     <link rel="icon" href="img/favicon.ico">
-    <link href="https://fonts.googleapis.com/css?family=Sawarabi+Mincho&display=swap" rel="stylesheet"></head>
+    <link href="https://fonts.googleapis.com/css?family=Sawarabi+Mincho&display=swap" rel="stylesheet">
+</head>
 
 <body>
     <div class="background"></div>
@@ -15,7 +17,7 @@
         <div class="footer">
             <div class="page">prev</div>
             <div class="page"><a href="index.html">top</a></div>
-            <div class="page"><a href="201028_mitsubd.html">next</a></div>
+            <div class="page"><a href="201020_tokoya.html">next</a></div>
         </div>
 
         <h3 class="h3-b">
@@ -861,7 +863,7 @@
                 「え、何急に」
             </div>
         </div>
-                <div class="main">
+        <div class="main">
             <div class="ic"><img src="img/usersXhqo0TufgPQTTcIOmMRpf7l9LSf1filesd90062dd161c722d70f260.png"></div>
             <div class="p">
                 <b class="mitsu">夜高ミツル</b><br>
@@ -888,7 +890,8 @@
                 <b class="gm">真城朔</b><br>
                 「クラスメイトの男を？」
             </div>
-        </div><div class="main">
+        </div>
+        <div class="main">
             <div class="ic"><img src="img/usersCuMxQXaHZnWBGqeYb1Crt9fHeJ83files91076df26a7e0f7927725e.png"></div>
             <div class="p">
                 <b class="gm">真城朔</b><br>
@@ -1756,6 +1759,7 @@
                 楽しかった、かな……。
             </div>
         </div>
+    </div>
 </body>
 
 </html>
