--- a/201028_mitsubd.html
+++ b/201028_mitsubd.html
@@ -14,7 +14,7 @@
   <div class="background"></div>
   <div class="body">
     <div class="footer">
-        <div class="page"><a href="180507_cover.html">prev</a></div>
+        <div class="page"><a href="201020_tokoya.html">prev</a></div>
         <div class="page"><a href="index.html">top</a></div>
         <div class="page"><a href="201101_halloween.html">next</a></div>
     </div>
