--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
         </ul>
         <ul class="list">
             <li class="list_list">
+                <a href="201020_tokoya.html" class="list_link">20/10/20 床屋帰り</a>
+            </li>
+        </ul>
+        <ul class="list">
+            <li class="list_list">
                 <a href="201028_mitsubd.html" class="list_link">20/10/28 ミツル誕生日</a>
             </li>
         </ul>
@@ -168,13 +173,13 @@
             </li>
         </ul>
         <ul class="list">
-             <li class="list_list">
+            <li class="list_list">
                 <div class="list_link">21/03/20 誕生日のやり直し</div>
             </li>
             <li class="list_list">
                 <a href="210320_1day.html" class="list_link">1</a>
             </li>
-                        <li class="list_list">
+            <li class="list_list">
                 <a href="210321_1day2.html" class="list_link">2</a>
             </li>
         </ul>
