--- a/201020_tokoya.html
+++ b/201020_tokoya.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>写経｜210000　xxx</title>
+    <title>写経｜2010上旬　床屋帰り</title>
     <link rel="stylesheet" href="css.css">
     <link rel="icon" href="img/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Sawarabi+Mincho&display=swap" rel="stylesheet">
