--- a/201111_monthly2.html
+++ b/201111_monthly2.html
@@ -16,7 +16,7 @@
         <div class="footer">
             <div class="page"><a href="201110_monthly.html">prev</a></div>
             <div class="page"><a href="index.html">top</a></div>
-            <div class="page"><a href="201223_xmas.html">next</a></div>
+            <div class="page"><a href="201201_cut.html">next</a></div>
         </div>
         <div class="box2"><p>マテンロウ計画様制作のシステム「<a href="http://usamimi.info/~ssproject/doa/index.html">Dead or AliCe</a>」内のおまけルール、かけひきで遊んだものです。</p></div>
         <h3 class="h3-b">
