--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </ul>
         <ul class="list">
             <li class="list_list">
-                <a href="201020_tokoya.html" class="list_link">20/10/20 床屋帰り</a>
+                <a href="201020_tokoya.html" class="list_link">20/10/- 床屋帰り</a>
             </li>
         </ul>
         <ul class="list">
@@ -56,6 +56,11 @@
         <ul class="list">
             <li class="list_list">
                 <a href="201111_monthly2.html" class="list_link">20/11/- かけひき-マンスリー入居翌日</a>
+            </li>
+        </ul>
+                <ul class="list">
+            <li class="list_list">
+                <a href="201201_cut.html" class="list_link">20/12/- 真城の髪を切る</a>
             </li>
         </ul>
         <ul class="list">
