--- a/201201_cut.html
+++ b/201201_cut.html
@@ -16,8 +16,9 @@
         <div class="footer">
             <div class="page"><a href="201110_monthly.html">prev</a></div>
             <div class="page"><a href="index.html">top</a></div>
-            <div class="page"><a href="201223_xmas.html">next</a></div></div>
-            
+            <div class="page"><a href="201223_xmas.html">next</a></div>
+        </div>
+
         <div class="main">
             <div class="ic"><img src="img/blank.gif" alt="avatar"></div>
             <div class="p">
@@ -6161,13 +6162,7 @@
                 「ん」
             </div>
         </div>
-        <div class="main">
-            <div class="ic"><img src="img/blank.gif" alt="avatar"></div>
-            <div class="p">
-                <b class="gm">noname</b><br>
-                　
-            </div>
-        </div>
+        <img src="img/hana.svg" class="hana">
         <div class="main">
             <div class="ic"><img src="img/usersCuMxQXaHZnWBGqeYb1Crt9fHeJ83files7bf0e4ab39f8f8e73046fa.png"
                     alt="avatar"></div>
