--- a/210320_1day.html
+++ b/210320_1day.html
@@ -6089,7 +6089,7 @@
                     alt="avatar"></div>
             <div class="p">
                 <b class="mitsu">夜高ミツル</b><br>
-                バスルームは乱れてはだけ、
+                バスローブは乱れてはだけ、
             </div>
         </div>
         <div class="main">
