--- a/201201_cut.html
+++ b/201201_cut.html
@@ -19,13 +19,7 @@
             <div class="page"><a href="201223_xmas.html">next</a></div>
         </div>
 
-        <div class="main">
-            <div class="ic"><img src="img/blank.gif" alt="avatar"></div>
-            <div class="p">
-                <b class="gm">noname</b><br>
-                2020/12/上旬
-            </div>
-        </div>
+        <h3 class="h3-b">2020/12/上旬</h3>
         <div class="main">
             <div class="ic"><img src="img/usersCuMxQXaHZnWBGqeYb1Crt9fHeJ83filesf52208d68e7fa6f1e6fd84.png"
                     alt="avatar"></div>
