--- a/201111_monthly2.html
+++ b/201111_monthly2.html
@@ -20,7 +20,7 @@
         </div>
         <div class="box2"><p>マテンロウ計画様制作のシステム「<a href="http://usamimi.info/~ssproject/doa/index.html">Dead or AliCe</a>」内のおまけルール、かけひきで遊んだものです。</p></div>
         <h3 class="h3-b">
-            2020年11月初旬 マンスリー入居翌日
+            2020/11/初旬 マンスリー入居翌日
         </h3>
         <div class="main">
             <div class="ic"><img src="img/usersXhqo0TufgPQTTcIOmMRpf7l9LSf1filesd62a8f14af8f2cea4741e4.png"></div>
