--- a/201201_cut.html
+++ b/201201_cut.html
@@ -212,6 +212,13 @@
                 なんか背後から緊張が伝わってきて……
             </div>
         </div>
+        <div class="box">
+            <div class="p">
+                <b class="mitsu">夜高ミツル</b><br>
+                2D6&gt;=5 （判定：斬る）<br>DiceBot :
+                (2D6&gt;=5) ＞ 2[1,2] ＞ 3 ＞ 失敗</span>
+            </div>
+        </div>
         <div class="main">
             <div class="ic"><img src="img/usersXhqo0TufgPQTTcIOmMRpf7l9LSf1filesdd72b569a0602c75c74b5f.png"
                     alt="avatar"></div>
