--- a/201201_cut.html
+++ b/201201_cut.html
@@ -16,7 +16,7 @@
         <div class="footer">
             <div class="page"><a href="201110_monthly.html">prev</a></div>
             <div class="page"><a href="index.html">top</a></div>
-            <div class="page"><a href="201223_xmas.html">next</a></div>
+            <div class="page"><a href="201201_cut2.html">next</a></div>
         </div>
 
         <h3 class="h3-b">2020/12/上旬</h3>
