--- a/index.html
+++ b/index.html
@@ -58,9 +58,14 @@
                 <a href="201111_monthly2.html" class="list_link">20/11/初旬 かけひき-マンスリー入居翌日</a>
             </li>
         </ul>
-                <ul class="list">
+        <ul class="list">
             <li class="list_list">
                 <a href="201201_cut.html" class="list_link">20/12/上旬 真城の髪を切る</a>
+            </li>
+        </ul>
+        <ul class="list">
+            <li class="list_list">
+                <a href="201201_cut2.html" class="list_link">20/12/上旬 ミツルが髪を切る</a>
             </li>
         </ul>
         <ul class="list">
