--- a/index.html
+++ b/index.html
@@ -193,6 +193,18 @@
                 <a href="210321_1day2.html" class="list_link">2</a>
             </li>
         </ul>
+        <ul class="list">
+            <li class="list_list">
+                <div class="list_link">21/04/上旬 髪を切る</div>
+            </li>
+            <li class="list_list">
+                <a href="210401_cut3.html" class="list_link">1</a>
+            </li>
+            <li class="list_list">
+                <a href="210402_cut4.html" class="list_link">2</a>
+            </li>
+        </ul>
+        
         <details>
             <summary>
                 <h2 class="index_h2">-SS-</h2>
