--- a/210402_cut4.html
+++ b/210402_cut4.html
@@ -13,6 +13,11 @@
 <body>
     <div class="background"></div>
     <div class="body">
+        <div class="footer">
+            <div class="page"><a href="210401_cut3.html">prev</a></div>
+            <div class="page"><a href="index.html">top</a></div>
+            <div class="page"><a href="index.html">next</a></div>
+        </div>
         <h3 class="h3-b">
             2021/04/上旬　真城の髪を切った翌日
         </h3>
