--- a/210321_1day2.html
+++ b/210321_1day2.html
@@ -14,7 +14,7 @@
     <div class="footer">
         <div class="page"><a href="210320_1day.html">prev</a></div>
         <div class="page"><a href="index.html">top</a></div>
-        <div class="page"><a href="index.html">next</a></div>
+        <div class="page"><a href="210401_cut3.html">next</a></div>
     </div>
     <h3 class="h3-b">
         2021/03/21 3時過ぎ </h3>
