--- a/index.html
+++ b/index.html
@@ -204,7 +204,18 @@
                 <a href="210402_cut4.html" class="list_link">2</a>
             </li>
         </ul>
-        
+        <ul class="list">
+            <li class="list_list">
+                <div class="list_link">21/04/16 ピクニック</div>
+            </li>
+            <li class="list_list">
+                <a href="210416_picnic1.html" class="list_link">1</a>
+            </li>
+            <li class="list_list">
+                <a href="210416_picnic2.html" class="list_link">2</a>
+            </li>
+        </ul>
+
         <details>
             <summary>
                 <h2 class="index_h2">-SS-</h2>
