--- a/210416_picnic2.html
+++ b/210416_picnic2.html
@@ -24,7 +24,7 @@
 <div class="main">
     <div class="ic"><img src="img/blank.gif" alt="avatar"></div>
     <div class="p">
-        <b class="gm">noname</b><br>
+        <b class="gm"></b><br>
         そのまま正午過ぎ。
     </div>
 </div>
