--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     href="https://doccia-hanagumori.github.io/flower/index.html">あなたへの花</a>」本編後～EXまでのミツルと真城の1年間のお話のログです。<br>
                 何の前触れもなく性描写が始まることがあります。</p>
         </div>
-        <div class="center"><img src="img/top.gif"></div>
+        <div class="center"><img src="img/top.gif" alt=""></div>
         <h2 class="index_h2">-LOG-</h2>
         <ul class="list">
             <li class="list_list">
@@ -329,7 +329,7 @@
                 </li>
             </ul>
         </details>
-        <img src="img/hana.svg" class="hana">
+        <img src="img/hana.svg" class="hana" alt="">
         <ul class="list">
             <li class="list_list">
                 <a href="https://doccia-hanagumori.github.io/flower/index.html" class="list_link">「あなたへの花」リプレイ</a>
