--- a/210423_hanami.html
+++ b/210423_hanami.html
@@ -16,7 +16,7 @@
         <div class="footer">
             <div class="page"><a href="210416_picnic2.html">prev</a></div>
             <div class="page"><a href="index.html">top</a></div>
-            <div class="page"><a href="index.html">next</a></div>
+            <div class="page"><a href="210427_hakai.html">next</a></div>
         </div>
         <h3 class="h3-b">
             2021/04/23 昼前
