--- a/index.html
+++ b/index.html
@@ -220,6 +220,11 @@
                 <a href="210423_hanami.html" class="list_link">21/04/23 花見</a>
             </li>
         </ul>
+        <ul class="list">
+            <li class="list_list">
+                <a href="210427_hakai.html" class="list_link">21/04/27 幸福破壊</a>
+            </li>
+        </ul>
 
         <details>
             <summary>
