--- a/index.html
+++ b/index.html
@@ -220,12 +220,17 @@
                 <a href="210423_hanami.html" class="list_link">21/04/23 花見</a>
             </li>
         </ul>
-        <ul class="list">
+       <ul class="list">
             <li class="list_list">
-                <a href="210427_hakai.html" class="list_link">21/04/27 幸福破壊</a>
+                <div class="list_link">21/04/27 幸福破壊</div>
+            </li>
+            <li class="list_list">
+                <a href="210427_hakai2.html" class="list_link">1</a>
+            </li>
+            <li class="list_list">
+                <a href="210427_hakai2.html" class="list_link">2</a>
             </li>
         </ul>
-
         <details>
             <summary>
                 <h2 class="index_h2">-SS-</h2>
