--- a/index.html
+++ b/index.html
@@ -231,6 +231,17 @@
                 <a href="210427_hakai2.html" class="list_link">2</a>
             </li>
         </ul>
+               <ul class="list">
+            <li class="list_list">
+                <div class="list_link">21/05/03 退院日</div>
+            </li>
+            <li class="list_list">
+                <a href="210503_taiin1.html" class="list_link">1</a>
+            </li>
+            <li class="list_list">
+                <a href="210503_taiin2.html" class="list_link">2</a>
+            </li>
+        </ul>
         <details>
             <summary>
                 <h2 class="index_h2">-SS-</h2>
