--- a/210503_taiin1.html
+++ b/210503_taiin1.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>写経｜210427　幸福破壊</title>
+    <title>写経｜210503　退院</title>
     <link rel="stylesheet" href="css.css">
     <link rel="icon" href="img/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Sawarabi+Mincho&display=swap" rel="stylesheet">
