--- a/210503_taiin2.html
+++ b/210503_taiin2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>写経｜210427　幸福破壊</title>
+    <title>写経｜210503　退院</title>
     <link rel="stylesheet" href="css.css">
     <link rel="icon" href="img/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Sawarabi+Mincho&display=swap" rel="stylesheet">
@@ -16,7 +16,7 @@
         <div class="footer">
             <div class="page"><a href="210503_taiin1.html">prev</a></div>
             <div class="page"><a href="index.html">top</a></div>
-            <div class="page"><a href="index.html">next</a></div>
+            <div class="page"><a href="210505_sanpo.html">next</a></div>
         </div>
         <h3 class="h3-b">
             2021/05/03　夜
