--- a/210505_sanpo.html
+++ b/210505_sanpo.html
@@ -16,7 +16,7 @@
         <div class="footer">
             <div class="page"><a href="210503_taiin2.html">prev</a></div>
             <div class="page"><a href="index.html">top</a></div>
-            <div class="page"><a href="index.html">next</a></div>
+            <div class="page"><a href="210509_tume1.html">next</a></div>
         </div>
         <h3 class="h3-b">
             2021/05/05 昼過ぎ
