--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                 <a href="210423_hanami.html" class="list_link">21/04/23 花見</a>
             </li>
         </ul>
-       <ul class="list">
+        <ul class="list">
             <li class="list_list">
                 <div class="list_link">21/04/27 幸福破壊</div>
             </li>
@@ -231,7 +231,7 @@
                 <a href="210427_hakai2.html" class="list_link">2</a>
             </li>
         </ul>
-               <ul class="list">
+        <ul class="list">
             <li class="list_list">
                 <div class="list_link">21/05/03 退院日</div>
             </li>
@@ -247,7 +247,18 @@
                 <a href="210505_sanpo.html" class="list_link">21/05/05 散歩</a>
             </li>
         </ul>
-        
+        <ul class="list">
+            <li class="list_list">
+                <div class="list_link">21/05/09 爪を切る</div>
+            </li>
+            <li class="list_list">
+                <a href="210509_tume1.html" class="list_link">1</a>
+            </li>
+            <li class="list_list">
+                <a href="210509_tume2.html" class="list_link">2</a>
+            </li>
+        </ul>
+
         <details>
             <summary>
                 <h2 class="index_h2">-SS-</h2>
