--- a/210509_tume2.html
+++ b/210509_tume2.html
@@ -16,7 +16,7 @@
         <div class="footer">
             <div class="page"><a href="210509_tume1.html">prev</a></div>
             <div class="page"><a href="index.html">top</a></div>
-            <div class="page"><a href="index.html">next</a></div>
+            <div class="page"><a href="210510_yonaki.html">next</a></div>
         </div>
         
         <div class="main">
