--- a/index.html
+++ b/index.html
@@ -264,10 +264,16 @@
         </ul>
         <ul class="list">
             <li class="list_list">
-                <a href="210527_kari.html" class="list_link">21/05/27 5月の狩りの後</a>
+                <div class="list_link">21/05/27 5月の狩りの後</div>
+            </li>
+            <li class="list_list">
+                <a href="210527_kari.html" class="list_link">1</a>
+            </li>
+            <li class="list_list">
+                <a href="210527_kari2.html" class="list_link">2</a>
             </li>
         </ul>
-
+        
         <details>
             <summary>
                 <h2 class="index_h2">-SS-</h2>
