--- a/index.html
+++ b/index.html
@@ -273,7 +273,12 @@
                 <a href="210527_kari2.html" class="list_link">2</a>
             </li>
         </ul>
-        
+        <ul class="list">
+            <li class="list_list">
+                <a href="210528_lunch.html" class="list_link">21/05/28 病院帰り</a>
+            </li>
+        </ul>
+
         <details>
             <summary>
                 <h2 class="index_h2">-SS-</h2>
