--- a/210527_kari2.html
+++ b/210527_kari2.html
@@ -16,7 +16,7 @@
         <div class="footer">
             <div class="page"><a href="210527_kari.html">prev</a></div>
             <div class="page"><a href="index.html">top</a></div>
-            <div class="page"><a href="index.html">next</a></div>
+            <div class="page"><a href="210528_lunch.html">next</a></div>
         </div>
 
         <h3 class="h3-b">
