--- a/index.html
+++ b/index.html
@@ -278,7 +278,11 @@
                 <a href="210528_lunch.html" class="list_link">21/05/28 病院帰り</a>
             </li>
         </ul>
-
+        <ul class="list">
+            <li class="list_list">
+                <a href="210610_training.html" class="list_link">21/06/10 特訓</a>
+            </li>
+        </ul>
         <details>
             <summary>
                 <h2 class="index_h2">-SS-</h2>
