--- a/210528_lunch.html
+++ b/210528_lunch.html
@@ -16,7 +16,7 @@
         <div class="footer">
             <div class="page"><a href="210527_kari2.html">prev</a></div>
             <div class="page"><a href="index.html">top</a></div>
-            <div class="page"><a href="index.html">next</a></div>
+            <div class="page"><a href="210610_training.html">next</a></div>
         </div>
         <h3 class="h3-b">
             2021/05/28 昼過ぎ
