--- a/index.html
+++ b/index.html
@@ -282,6 +282,18 @@
                 <a href="210610_training.html" class="list_link">21/06/10 特訓</a>
             </li>
         </ul>
+        <ul class="list">
+            <li class="list_list">
+                <div class="list_link">21/07/07 七夕</div>
+            </li>
+            <li class="list_list">
+                <a href="210707_tanabata1.html" class="list_link">1</a>
+            </li>
+            <li class="list_list">
+                <a href="210707_tanabata2.html" class="list_link">2</a>
+            </li>
+        </ul>
+
         <details>
             <summary>
                 <h2 class="index_h2">-SS-</h2>
