--- a/index.html
+++ b/index.html
@@ -282,6 +282,11 @@
                 <a href="210610_training.html" class="list_link">21/06/10 特訓</a>
             </li>
         </ul>
+                <ul class="list">
+            <li class="list_list">
+                <a href="210610_training.html" class="list_link">21/06/18 スコーン作り</a>
+            </li>
+        </ul>
         <ul class="list">
             <li class="list_list">
                 <div class="list_link">21/07/07 七夕</div>
