--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                 <a href="210610_training.html" class="list_link">21/06/10 特訓</a>
             </li>
         </ul>
-                <ul class="list">
+        <ul class="list">
             <li class="list_list">
                 <a href="210610_training.html" class="list_link">21/06/18 スコーン作り</a>
             </li>
@@ -296,6 +296,16 @@
             </li>
             <li class="list_list">
                 <a href="210707_tanabata2.html" class="list_link">2</a>
+            </li>
+        </ul>
+        <ul class="list">
+            <li class="list_list">
+                <a href="210710_cry.html" class="list_link">21/07/10 真城が泣く</a>
+            </li>
+        </ul>
+        <ul class="list">
+            <li class="list_list">
+                <a href="210714_kakehiki.html" class="list_link">21/07/14 かけひき</a>
             </li>
         </ul>
 
