--- a/210707_tanabata2.html
+++ b/210707_tanabata2.html
@@ -15,7 +15,7 @@
         <div class="footer">
             <div class="page"><a href="210707_tanabata1.html">prev</a></div>
             <div class="page"><a href="index.html">top</a></div>
-            <div class="page"><a href="index.html">next</a></div>
+            <div class="page"><a href="210710_cry.html">next</a></div>
         </div>
 
         <div class="main">
