--- a/index.html
+++ b/index.html
@@ -308,7 +308,11 @@
                 <a href="210714_kakehiki.html" class="list_link">21/07/14 かけひき</a>
             </li>
         </ul>
-
+        <ul class="list">
+            <li class="list_list">
+                <a href="210716_pizza.html" class="list_link">21/07/16 ピザ作り</a>
+            </li>
+        </ul>
         <details>
             <summary>
                 <h2 class="index_h2">-SS-</h2>
