--- a/210714_kakehiki.html
+++ b/210714_kakehiki.html
@@ -15,7 +15,7 @@
         <div class="footer">
             <div class="page"><a href="210710_cry.html">prev</a></div>
             <div class="page"><a href="index.html">top</a></div>
-            <div class="page"><a href="index.html">next</a></div>
+            <div class="page"><a href="210716_pizza.html">next</a></div>
         </div>
         <h3 class="h3-b">
             2021/07/14 朝
