--- a/210716_pizza.html
+++ b/210716_pizza.html
@@ -24,14 +24,14 @@
 <div class="main">
     <div class="ic"><img src="img/blank.gif" alt=""></div>
     <div class="p">
-        <b class="gm">noname</b><br>
+        <b class="gm"></b><br>
         夏の札幌昼下がり。
     </div>
 </div>
 <div class="main">
     <div class="ic"><img src="img/blank.gif" alt=""></div>
     <div class="p">
-        <b class="gm">noname</b><br>
+        <b class="gm"></b><br>
         北海道だろうと思いの外容赦なく太陽の照りつける夏の日に、
     </div>
 </div>
@@ -43,7 +43,7 @@
     </div>
 </div>
 <div class="main">
-    <div class="ic"><img src="img/usersXhqo0TufgPQTTcIOmMRpf7l9LSf1files7de24de2fb8a253fd7ae5d.png" alt=""></div>
+    <div class="ic"><img src="img/usersXhqo0TufgPQTTcIOmMRpf7l9LSf1files96a5ab3bcdf5fa8022626f.png" alt=""></div>
     <div class="p">
         <b class="mitsu">夜高ミツル</b><br>
         二人でキッチンに並ぶのもすっかりいつもの光景。
