--- a/index.html
+++ b/index.html
@@ -313,6 +313,20 @@
                 <a href="210716_pizza.html" class="list_link">21/07/16 ピザ作り</a>
             </li>
         </ul>
+        <ul class="list">
+            <li class="list_list">
+                <div class="list_link">21/07/18 夏風邪</div>
+            </li>
+            <li class="list_list">
+                <a href="210718_cold.html" class="list_link">1</a>
+            </li>
+            <li class="list_list">
+                <a href="210718_cold2.html" class="list_link">2</a>
+            </li>
+        </ul>
+
+
+
         <details>
             <summary>
                 <h2 class="index_h2">-SS-</h2>
