--- a/index.html
+++ b/index.html
@@ -326,13 +326,16 @@
         </ul>
       <ul class="list">
             <li class="list_list">
-                <div class="list_link">21/07/18 夏風邪</div>
+                <div class="list_link">21/07/24 7月の狩り</div>
             </li>
             <li class="list_list">
-                <a href="210718_cold.html" class="list_link">1</a>
+                <a href="210724_hunt1.html" class="list_link">1</a>
             </li>
             <li class="list_list">
-                <a href="210718_cold2.html" class="list_link">2</a>
+                <a href="210724_hunt2.html" class="list_link">2</a>
+            </li>
+                        <li class="list_list">
+                <a href="210724_hunt3.html" class="list_link">3</a>
             </li>
         </ul>
 
