--- a/210724_hunt3.html
+++ b/210724_hunt3.html
@@ -15,7 +15,7 @@
         <div class="footer">
             <div class="page"><a href="210724_hunt2.html">prev</a></div>
             <div class="page"><a href="index.html">top</a></div>
-            <div class="page"><a href="index.html">next</a></div>
+            <div class="page"><a href="210726_hunt4.html">next</a></div>
         </div>
         <h3 class="h3-b">
             2021/07/25 夕暮れ
