--- a/index.html
+++ b/index.html
@@ -338,6 +338,17 @@
                 <a href="210724_hunt3.html" class="list_link">3</a>
             </li>
         </ul>
+        <ul class="list">
+            <li class="list_list">
+                <div class="list_link">21/07/26 7月の狩りのあと</div>
+            </li>
+            <li class="list_list">
+                <a href="210726_hunt4.html" class="list_link">1</a>
+            </li>
+            <li class="list_list">
+                <a href="210726_hunt5.html" class="list_link">2</a>
+            </li>
+        </ul>
 
 
         <details>
