--- a/210726_hunt5.html
+++ b/210726_hunt5.html
@@ -15,7 +15,7 @@
         <div class="footer">
             <div class="page"><a href="210726_hunt4.html">prev</a></div>
             <div class="page"><a href="index.html">top</a></div>
-            <div class="page"><a href="index.html">next</a></div>
+            <div class="page"><a href="210801_esta.html">next</a></div>
         </div>
         <h3 class="h3-b">
             2021/07/26 22時頃
