--- a/index.html
+++ b/index.html
@@ -349,6 +349,11 @@
                 <a href="210726_hunt5.html" class="list_link">2</a>
             </li>
         </ul>
+        <ul class="list">
+            <li class="list_list">
+                <a href="210801_esta.html" class="list_link">21/08/01 複合商業施設にて</a>
+            </li>
+        </ul>
 
 
         <details>
