--- a/210801_esta.html
+++ b/210801_esta.html
@@ -15,7 +15,7 @@
         <div class="footer">
             <div class="page"><a href="210726_hunt5.html">prev</a></div>
             <div class="page"><a href="index.html">top</a></div>
-            <div class="page"><a href="index.html">next</a></div>
+            <div class="page"><a href="210803_pizza.html">next</a></div>
         </div>
         <h3 class="h3-b">
             2021/08/01 昼過ぎ
