--- a/index.html
+++ b/index.html
@@ -354,7 +354,11 @@
                 <a href="210801_esta.html" class="list_link">21/08/01 複合商業施設にて</a>
             </li>
         </ul>
-
+        <ul class="list">
+            <li class="list_list">
+                <a href="210803_pizza.html" class="list_link">21/08/03 ピザ作り2</a>
+            </li>
+        </ul>
 
         <details>
             <summary>
