--- a/index.html
+++ b/index.html
@@ -359,7 +359,11 @@
                 <a href="210803_pizza.html" class="list_link">21/08/03 ピザ作り2</a>
             </li>
         </ul>
-
+        <ul class="list">
+            <li class="list_list">
+                <a href="210807_nidone.html" class="list_link">21/08/07 遅起きの日</a>
+            </li>
+        </ul>
         <details>
             <summary>
                 <h2 class="index_h2">-SS-</h2>
