--- a/210803_pizza.html
+++ b/210803_pizza.html
@@ -16,7 +16,7 @@
         <div class="footer">
             <div class="page"><a href="210801_esta.html">prev</a></div>
             <div class="page"><a href="index.html">top</a></div>
-            <div class="page"><a href="index.html">next</a></div>
+            <div class="page"><a href="210807_nidone.html">next</a></div>
         </div>
         <h3 class="h3-b">
             2021/08/03 昼過ぎ
