--- a/210807_nidone.html
+++ b/210807_nidone.html
@@ -16,7 +16,7 @@
         <div class="footer">
             <div class="page"><a href="210803_pizza.html">prev</a></div>
             <div class="page"><a href="index.html">top</a></div>
-            <div class="page"><a href="index.html">next</a></div>
+            <div class="page"><a href="210812_farm.html">next</a></div>
         </div>
         <h3 class="h3-b">
             2021/08/07 朝
