--- a/index.html
+++ b/index.html
@@ -364,6 +364,12 @@
                 <a href="210807_nidone.html" class="list_link">21/08/07 遅起きの日</a>
             </li>
         </ul>
+        <ul class="list">
+            <li class="list_list">
+                <a href="210812_farm.html" class="list_link">21/08/12 牧場</a>
+            </li>
+        </ul>
+        
         <details>
             <summary>
                 <h2 class="index_h2">-SS-</h2>
