--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
                 <a href="210812_farm.html" class="list_link">21/08/12 牧場</a>
             </li>
         </ul>
-        
+
         <details>
             <summary>
                 <h2 class="index_h2">-SS-</h2>
@@ -459,6 +459,17 @@
                         src="img/pic_nakki.png"></a>
                 <a href="img/pic_hase.jpg" data-fimg="pict" data-fcaption="ハセさんより/コミッション依頼品" class="fuwaimg"><img
                         class="pict" src="img/pic_hase.jpg"></a>
+                <a href="img/pic_natsume1.png" data-fimg="pict" data-fcaption="諸田トモエさんより/コミッション依頼品（1/4）"
+                    class="fuwaimg"><img class="pict" src="img/pic_natsume1.png"></a>
+                <a href="img/pic_natsume2.png" data-fimg="pict" data-fcaption="諸田トモエさんより/コミッション依頼品（2/4）"
+                    class="fuwaimg"></a>
+                <a href="img/pic_natsume3.png" data-fimg="pict" data-fcaption="諸田トモエさんより/コミッション依頼品（3/4）"
+                    class="fuwaimg"></a>
+                <a href="img/pic_natsume4.png" data-fimg="pict" data-fcaption="諸田トモエさんより/コミッション依頼品（4/4）"
+                    class="fuwaimg"></a>
+
+                <a href="img/pic_mushipan2.png" data-fimg="pict" data-fcaption="蒸しパンさんより" class="fuwaimg"><img
+                        class="pict" src="img/pic_mushipan2.png"></a>
             </div>
         </details>
         <details>
