--- a/210812_farm.html
+++ b/210812_farm.html
@@ -16,7 +16,7 @@
         <div class="footer">
             <div class="page"><a href="210807_nidone.html">prev</a></div>
             <div class="page"><a href="index.html">top</a></div>
-            <div class="page"><a href="index.html">next</a></div>
+            <div class="page"><a href="210815_kakutako.html">next</a></div>
         </div>
         <h3 class="h3-b">
             2021/08/12 午前
