--- a/index.html
+++ b/index.html
@@ -369,7 +369,11 @@
                 <a href="210812_farm.html" class="list_link">21/08/12 牧場</a>
             </li>
         </ul>
-
+        <ul class="list">
+            <li class="list_list">
+                <a href="210815_kakutako.html" class="list_link">21/08/15 かくたこ</a>
+            </li>
+        </ul>
         <details>
             <summary>
                 <h2 class="index_h2">-SS-</h2>
