--- a/index.html
+++ b/index.html
@@ -374,6 +374,12 @@
                 <a href="210815_kakutako.html" class="list_link">21/08/15 かくたこ</a>
             </li>
         </ul>
+        <ul class="list">
+            <li class="list_list">
+                <a href="210816_sanpo.html" class="list_link">21/08/16 散歩</a>
+            </li>
+        </ul>
+        
         <details>
             <summary>
                 <h2 class="index_h2">-SS-</h2>
