--- a/index.html
+++ b/index.html
@@ -379,6 +379,17 @@
                 <a href="210816_sanpo.html" class="list_link">21/08/16 散歩</a>
             </li>
         </ul>
+        <ul class="list">
+            <li class="list_list">
+                <div class="list_link">21/08/19 登山</div>
+            </li>
+            <li class="list_list">
+                <a href="210819_moiwa1.html" class="list_link">1</a>
+            </li>
+            <li class="list_list">
+                <a href="210819_moiwa2.html" class="list_link">2</a>
+            </li>
+        </ul>
         
         <details>
             <summary>
