--- a/210816_sanpo.html
+++ b/210816_sanpo.html
@@ -16,7 +16,7 @@
         <div class="footer">
             <div class="page"><a href="210815_kakutako.html">prev</a></div>
             <div class="page"><a href="index.html">top</a></div>
-            <div class="page"><a href="index.html">next</a></div>
+            <div class="page"><a href="210819_moiwa1.html">next</a></div>
         </div>
         <h3 class="h3-b">
             2021/08/16 昼過ぎ
