--- a/index.html
+++ b/index.html
@@ -390,7 +390,17 @@
                 <a href="210819_moiwa2.html" class="list_link">2</a>
             </li>
         </ul>
-        
+        <ul class="list">
+            <li class="list_list">
+                <a href="210822_hunt.html" class="list_link">21/08/22 8月の狩りの後</a>
+            </li>
+        </ul>
+        <ul class="list">
+            <li class="list_list">
+                <a href="210823_curry.html" class="list_link">21/08/23 カレー作り</a>
+            </li>
+        </ul>
+
         <details>
             <summary>
                 <h2 class="index_h2">-SS-</h2>
