--- a/210819_moiwa2.html
+++ b/210819_moiwa2.html
@@ -16,7 +16,7 @@
         <div class="footer">
             <div class="page"><a href="210819_moiwa1.html">prev</a></div>
             <div class="page"><a href="index.html">top</a></div>
-            <div class="page"><a href="index.html">next</a></div>
+            <div class="page"><a href="210822_hunt.html">next</a></div>
         </div>
 
 
