--- a/index.html
+++ b/index.html
@@ -400,7 +400,12 @@
                 <a href="210823_curry.html" class="list_link">21/08/23 カレー作り</a>
             </li>
         </ul>
-
+        <ul class="list">
+            <li class="list_list">
+                <a href="210824_rta.html" class="list_link">21/08/24 イチャつき</a>
+            </li>
+        </ul>
+        
         <details>
             <summary>
                 <h2 class="index_h2">-SS-</h2>
