--- a/210823_curry.html
+++ b/210823_curry.html
@@ -14,9 +14,9 @@
     <div class="background"></div>
     <div class="body">
         <div class="footer">
-            <div class="page"><a href="210819_moiwa2.html">prev</a></div>
+            <div class="page"><a href="210822_hunt.html">prev</a></div>
             <div class="page"><a href="index.html">top</a></div>
-            <div class="page"><a href="210823_curry.html">next</a></div>
+            <div class="page"><a href="210824_rta.html">next</a></div>
         </div>
         <h3 class="h3-b">
             2021/08/23 夕方
