--- a/index.html
+++ b/index.html
@@ -405,6 +405,11 @@
                 <a href="210824_rta.html" class="list_link">21/08/24 イチャつき</a>
             </li>
         </ul>
+                <ul class="list">
+            <li class="list_list">
+                <a href="210826_noria.html" class="list_link">21/08/26 観覧車</a>
+            </li>
+        </ul>
         
         <details>
             <summary>
