--- a/210824_rta.html
+++ b/210824_rta.html
@@ -16,7 +16,7 @@
         <div class="footer">
             <div class="page"><a href="210823_curry.html">prev</a></div>
             <div class="page"><a href="index.html">top</a></div>
-            <div class="page"><a href="index.html">next</a></div>
+            <div class="page"><a href="210826_noria.html">next</a></div>
         </div>
         <h3 class="h3-b">
             2021/08/24 昼過ぎ
