--- a/index.html
+++ b/index.html
@@ -405,12 +405,16 @@
                 <a href="210824_rta.html" class="list_link">21/08/24 イチャつき</a>
             </li>
         </ul>
-                <ul class="list">
+        <ul class="list">
             <li class="list_list">
                 <a href="210826_noria.html" class="list_link">21/08/26 観覧車</a>
             </li>
         </ul>
-        
+        <ul class="list">
+            <li class="list_list">
+                <a href="210828_karaage.html" class="list_link">21/08/28　唐揚げ作り</a>
+            </li>
+        </ul>
         <details>
             <summary>
                 <h2 class="index_h2">-SS-</h2>
@@ -508,9 +512,10 @@
                     class="fuwaimg"></a>
                 <a href="img/pic_natsume4.png" data-fimg="pict" data-fcaption="諸田トモエさんより/コミッション依頼品（4/4）"
                     class="fuwaimg"></a>
-
                 <a href="img/pic_mushipan2.png" data-fimg="pict" data-fcaption="蒸しパンさんより" class="fuwaimg"><img
                         class="pict" src="img/pic_mushipan2.png"></a>
+                <a href="img/pic_suzuka.png" data-fimg="pict" data-fcaption="すずかさんより/コミッション依頼品" class="fuwaimg"><img
+                        class="pict" src="img/pic_suzuka.png"></a>
             </div>
         </details>
         <details>
