--- a/210826_noria.html
+++ b/210826_noria.html
@@ -17,7 +17,7 @@
         <div class="footer">
             <div class="page"><a href="210824_rta.html">prev</a></div>
             <div class="page"><a href="index.html">top</a></div>
-            <div class="page"><a href="index.html">next</a></div>
+            <div class="page"><a href="210828_karaage.html">next</a></div>
         </div>
         <h3 class="h3-b">
             2021/08/26 夜
