--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
         </ul>
         <ul class="list">
             <li class="list_list">
-                <a href="210828_karaage.html" class="list_link">21/08/28　唐揚げ作り</a>
+                <a href="210828_karaage.html" class="list_link">21/08/28 唐揚げ作り</a>
             </li>
         </ul>
         <details>
@@ -498,6 +498,28 @@
                 <h2 class="index_h2">-PICTURE-</h2>
             </summary>
             <div class="center">
+                <a href="img/pic_03.png" data-fimg="pict" data-fcaption="" class="fuwaimg"><img class="pict"
+                        class="brightness" src="img/pic_03.png"></a>
+                <a href="img/pic_04.png" data-fimg="pict" data-fcaption="" class="fuwaimg"><img class="pict"
+                        class="brightness" src="img/pic_04.png"></a>
+                <a href="img/pic_01.png" data-fimg="pict" data-fcaption="" class="fuwaimg"><img class="pict"
+                        class="brightness" src="img/pic_01.png"></a>
+                <a href="img/pic_02.gif" data-fimg="pict" data-fcaption="" class="fuwaimg"><img class="pict"
+                        class="brightness" src="img/pic_02.gif"></a>
+                <a href="img/pic_05.jpg" data-fimg="pict" data-fcaption="" class="fuwaimg"><img class="pict"
+                        class="brightness" src="img/pic_05.jpg"></a>
+                <a href="img/pic_06.jpg" data-fimg="pict" data-fcaption="" class="fuwaimg"><img class="pict"
+                        class="brightness" src="img/pic_06.jpg"></a>
+                <a href="img/pic_07.png" data-fimg="pict" data-fcaption="" class="fuwaimg"><img class="pict"
+                        class="brightness" src="img/pic_07.png"></a>
+                <a href="img/pic_08.png" data-fimg="pict" data-fcaption="" class="fuwaimg"><img class="pict"
+                        class="brightness" src="img/pic_08.png"></a>
+                <a href="img/pic_09.png" data-fimg="pict" data-fcaption="" class="fuwaimg"><img class="pict"
+                        class="brightness" src="img/pic_09.png"></a>
+                <a href="img/pic_10.png" data-fimg="pict" data-fcaption="" class="fuwaimg"><img class="pict"
+                        class="brightness" src="img/pic_10.png"></a>
+                        
+<img src="img/hana.svg" class="hana">
                 <a href="img/pic_mushipan.png" data-fimg="pict" data-fcaption="蒸しパンさんより" class="fuwaimg"><img
                         class="pict" class="brightness" src="img/pic_mushipan.png"></a>
                 <a href="img/pic_nakki.png" data-fimg="pict" data-fcaption="なっきさんより" class="fuwaimg"><img class="pict"
