--- a/index.html
+++ b/index.html
@@ -516,10 +516,12 @@
                         class="brightness" src="img/pic_08.png"></a>
                 <a href="img/pic_09.png" data-fimg="pict" data-fcaption="" class="fuwaimg"><img class="pict"
                         class="brightness" src="img/pic_09.png"></a>
+                <a href="img/pic_11.png" data-fimg="pict" data-fcaption="" class="fuwaimg"><img class="pict"
+                        class="brightness" src="img/pic_11.png"></a>
                 <a href="img/pic_10.png" data-fimg="pict" data-fcaption="" class="fuwaimg"><img class="pict"
                         class="brightness" src="img/pic_10.png"></a>
-                        
-<img src="img/hana.svg" class="hana">
+
+                <img src="img/hana.svg" class="hana">
                 <a href="img/pic_mushipan.png" data-fimg="pict" data-fcaption="蒸しパンさんより" class="fuwaimg"><img
                         class="pict" class="brightness" src="img/pic_mushipan.png"></a>
                 <a href="img/pic_nakki.png" data-fimg="pict" data-fcaption="なっきさんより" class="fuwaimg"><img class="pict"
