--- a/index.html
+++ b/index.html
@@ -415,6 +415,12 @@
                 <a href="210828_karaage.html" class="list_link">21/08/28 唐揚げ作り</a>
             </li>
         </ul>
+        <ul class="list">
+            <li class="list_list">
+                <a href="210829_icha.html" class="list_link">21/08/29 イチャつき</a>
+            </li>
+        </ul>
+        
         <details>
             <summary>
                 <h2 class="index_h2">-SS-</h2>
@@ -565,6 +571,9 @@
                 <a href="https://doccia-hanagumori.github.io/flower/index.html" class="list_link">「あなたへの花」リプレイ</a>
             </li>
         </ul>
+        <div class="copyright">
+        本サイトのプレイログは、「齋藤高吉」「冒険企画局」「株式会社新紀元社」が権利を有する『ホラーアクションRPG ブラッドムーン』の二次創作物です。<br>
+（C）齋藤高吉／冒険企画局／新紀元社</div>
         <script src="fuwaimg.js"></script>
 </body>
 
