--- a/210828_karaage.html
+++ b/210828_karaage.html
@@ -17,7 +17,7 @@
         <div class="footer">
             <div class="page"><a href="210826_noria.html">prev</a></div>
             <div class="page"><a href="index.html">top</a></div>
-            <div class="page"><a href="index.html">next</a></div>
+            <div class="page"><a href="210829_icha.html">next</a></div>
         </div>
         <h3 class="h3-b">
             2021/08/28 夕方
