--- a/index.html
+++ b/index.html
@@ -568,7 +568,8 @@
         <img src="img/hana.svg" class="hana" alt="">
         <ul class="list">
             <li class="list_list">
-                <a href="https://doccia-hanagumori.github.io/flower/index.html" class="list_link">「あなたへの花」リプレイ</a>
+                <a href="https://doccia-hanagumori.github.io/flower/index.html" class="list_link" target="_blank"
+                rel="noopener noreferrer">「あなたへの花」リプレイ</a>
             </li>
         </ul>
         <div class="copyright">
