--- a/index.html
+++ b/index.html
@@ -420,6 +420,11 @@
                 <a href="210829_icha.html" class="list_link">21/08/29 イチャつき</a>
             </li>
         </ul>
+                <ul class="list">
+            <li class="list_list">
+                <a href="210830_super.html" class="list_link">21/08/30 抜糸の帰り</a>
+            </li>
+        </ul>
         
         <details>
             <summary>
