--- a/210829_icha.html
+++ b/210829_icha.html
@@ -17,7 +17,7 @@
         <div class="footer">
             <div class="page"><a href="210828_karaage.html">prev</a></div>
             <div class="page"><a href="index.html">top</a></div>
-            <div class="page"><a href="index.html">next</a></div>
+            <div class="page"><a href="210830_super.html">next</a></div>
         </div>
         <h3 class="h3-b">
             2021/08/29 昼過ぎ
