--- a/index.html
+++ b/index.html
@@ -420,12 +420,18 @@
                 <a href="210829_icha.html" class="list_link">21/08/29 イチャつき</a>
             </li>
         </ul>
-                <ul class="list">
+        <ul class="list">
             <li class="list_list">
                 <a href="210830_super.html" class="list_link">21/08/30 抜糸の帰り</a>
             </li>
         </ul>
-        
+        <ul class="list">
+            <li class="list_list">
+                <a href="210901_care.html" class="list_link">21/09/01 9月の話</a>
+            </li>
+        </ul>
+
+
         <details>
             <summary>
                 <h2 class="index_h2">-SS-</h2>
@@ -574,12 +580,12 @@
         <ul class="list">
             <li class="list_list">
                 <a href="https://doccia-hanagumori.github.io/flower/index.html" class="list_link" target="_blank"
-                rel="noopener noreferrer">「あなたへの花」リプレイ</a>
+                    rel="noopener noreferrer">「あなたへの花」リプレイ</a>
             </li>
         </ul>
         <div class="copyright">
-        本サイトのプレイログは、「齋藤高吉」「冒険企画局」「株式会社新紀元社」が権利を有する『ホラーアクションRPG ブラッドムーン』の二次創作物です。<br>
-（C）齋藤高吉／冒険企画局／新紀元社</div>
+            本サイトのプレイログは、「齋藤高吉」「冒険企画局」「株式会社新紀元社」が権利を有する『ホラーアクションRPG ブラッドムーン』の二次創作物です。<br>
+            （C）齋藤高吉／冒険企画局／新紀元社</div>
         <script src="fuwaimg.js"></script>
 </body>
 
