--- a/210901_care.html
+++ b/210901_care.html
@@ -17,7 +17,7 @@
         <div class="footer">
             <div class="page"><a href="210830_super.html">prev</a></div>
             <div class="page"><a href="index.html">top</a></div>
-            <div class="page"><a href="index.html">next</a></div>
+            <div class="page"><a href="210905_clean.html">next</a></div>
         </div>
         <h3 class="h3-b">
             2021/09/01 昼過ぎ
