--- a/index.html
+++ b/index.html
@@ -430,7 +430,11 @@
                 <a href="210901_care.html" class="list_link">21/09/01 9月の話</a>
             </li>
         </ul>
-
+        <ul class="list">
+            <li class="list_list">
+                <a href="210905_clean.html" class="list_link">21/09/05 大掃除</a>
+            </li>
+        </ul>
 
         <details>
             <summary>
