--- a/210905_clean.html
+++ b/210905_clean.html
@@ -17,7 +17,7 @@
         <div class="footer">
             <div class="page"><a href="210901_care.html">prev</a></div>
             <div class="page"><a href="index.html">top</a></div>
-            <div class="page"><a href="index.html">next</a></div>
+            <div class="page"><a href="210907_cooking.html">next</a></div>
         </div>
         <h3 class="h3-b">
             2021/09/05 昼過ぎ
@@ -2590,14 +2590,7 @@
                 「戻る」
             </div>
         </div>
-        <div class="main">
-            <div class="ic"><img src="img/usersXhqo0TufgPQTTcIOmMRpf7l9LSf1filesb1c71c24b47f3174b2f7f5.png" alt="">
-            </div>
-            <div class="p">
-                <b class="mitsu">夜高ミツル</b><br>
-                xxx
-            </div>
-        </div>
+
         <div class="main">
             <div class="ic"><img src="img/usersXhqo0TufgPQTTcIOmMRpf7l9LSf1files96a5ab3bcdf5fa8022626f.png" alt="">
             </div>
@@ -5886,14 +5879,7 @@
                 ベランダに夢中になっちゃって……
             </div>
         </div>
-        <div class="main">
-            <div class="ic"><img src="img/usersXhqo0TufgPQTTcIOmMRpf7l9LSf1files96a5ab3bcdf5fa8022626f.png" alt="">
-            </div>
-            <div class="p">
-                <b class="mitsu">夜高ミツル</b><br>
-                xxx
-            </div>
-        </div>
+
         <div class="main">
             <div class="ic"><img src="img/usersCuMxQXaHZnWBGqeYb1Crt9fHeJ83filesf52208d68e7fa6f1e6fd84.png" alt="">
             </div>
@@ -7150,13 +7136,7 @@
                     また頷いて、後片付けのために洗面所を後にした。
                 </div>
             </div>
-            <div class="main">
-                <div class="ic"><img src="img/blank.gif" alt=""></div>
-                <div class="p">
-                    <b class="gm">noname</b><br>
-                    　
-                </div>
-            </div>
+            <img src="img/hana.svg" class="hana">
             <div class="main">
                 <div class="ic"><img src="img/usersCuMxQXaHZnWBGqeYb1Crt9fHeJ83filesbe02357bc81508a2e8d3a0.png" alt="">
                 </div>
