--- a/index.html
+++ b/index.html
@@ -435,9 +435,14 @@
                 <a href="210905_clean.html" class="list_link">21/09/05 大掃除</a>
             </li>
         </ul>
-                <ul class="list">
+        <ul class="list">
             <li class="list_list">
                 <a href="210907_cooking.html" class="list_link">21/09/07 最後の料理</a>
+            </li>
+        </ul>
+        <ul class="list">
+            <li class="list_list">
+                <a href="210910_goaway.html" class="list_link">21/09/10 マンスリー退去</a>
             </li>
         </ul>
 
