--- a/index.html
+++ b/index.html
@@ -445,6 +445,17 @@
                 <a href="210910_goaway.html" class="list_link">21/09/10 マンスリー退去</a>
             </li>
         </ul>
+        <ul class="list">
+            <li class="list_list">
+                <div class="list_link">21/09/11 函館</div>
+            </li>
+            <li class="list_list">
+                <a href="210911_hakodate1.html" class="list_link">1</a>
+            </li>
+            <li class="list_list">
+                <a href="210911_hakodate2.html" class="list_link">2</a>
+            </li>
+        </ul>
 
         <details>
             <summary>
