--- a/index.html
+++ b/index.html
@@ -456,6 +456,11 @@
                 <a href="210911_hakodate2.html" class="list_link">2</a>
             </li>
         </ul>
+        <ul class="list">
+            <li class="list_list">
+                <a href="210915_onsen.html" class="list_link">21/09/15 温泉旅館</a>
+            </li>
+        </ul>
 
         <details>
             <summary>
@@ -600,6 +605,13 @@
                         rel="noopener noreferrer">失われた幸福と、それにまつわる物語の話 | note</a>
                 </li>
             </ul>
+            <ul class="list">
+                <li class="list_list">
+                    <a href="https://note.com/ari_ori/n/n046c88e97805" class="list_link" target="_blank"
+                        rel="noopener noreferrer">失われた幸福に寄せた一年間の話  | note</a>
+                </li>
+            </ul>
+            
         </details>
         <img src="img/hana.svg" class="hana" alt="">
         <ul class="list">
