--- a/210911_hakodate2.html
+++ b/210911_hakodate2.html
@@ -17,7 +17,7 @@
         <div class="footer">
             <div class="page"><a href="210911_hakodate1.html">prev</a></div>
             <div class="page"><a href="index.html">top</a></div>
-            <div class="page"><a href="index.html">next</a></div>
+            <div class="page"><a href="210915_onsen.html">next</a></div>
         </div>
 
         <div class="main">
