--- a/index.html
+++ b/index.html
@@ -461,6 +461,11 @@
                 <a href="210915_onsen.html" class="list_link">21/09/15 温泉旅館</a>
             </li>
         </ul>
+        <ul class="list">
+            <li class="list_list">
+                <a href="210922_hunt.html" class="list_link">21/09/22 9月の狩りの後</a>
+            </li>
+        </ul>
 
         <details>
             <summary>
@@ -608,10 +613,10 @@
             <ul class="list">
                 <li class="list_list">
                     <a href="https://note.com/ari_ori/n/n046c88e97805" class="list_link" target="_blank"
-                        rel="noopener noreferrer">失われた幸福に寄せた一年間の話  | note</a>
+                        rel="noopener noreferrer">失われた幸福に寄せた一年間の話 | note</a>
                 </li>
             </ul>
-            
+
         </details>
         <img src="img/hana.svg" class="hana" alt="">
         <ul class="list">
