--- a/index.html
+++ b/index.html
@@ -466,6 +466,11 @@
                 <a href="210922_hunt.html" class="list_link">21/09/22 9月の狩りの後</a>
             </li>
         </ul>
+        <ul class="list">
+            <li class="list_list">
+                <a href="210928_yonezawa.html" class="list_link">21/09/28 道の駅にて</a>
+            </li>
+        </ul>
 
         <details>
             <summary>
