--- a/210922_hunt.html
+++ b/210922_hunt.html
@@ -17,7 +17,7 @@
         <div class="footer">
             <div class="page"><a href="210915_onsen.html">prev</a></div>
             <div class="page"><a href="index.html">top</a></div>
-            <div class="page"><a href="index.html">next</a></div>
+            <div class="page"><a href="210928_yonezawa.html">next</a></div>
         </div>
         <h3 class="h3-b">
             2021/09/22　早朝
