--- a/index.html
+++ b/index.html
@@ -471,6 +471,17 @@
                 <a href="210928_yonezawa.html" class="list_link">21/09/28 道の駅にて</a>
             </li>
         </ul>
+        <ul class="list">
+            <li class="list_list">
+                <div class="list_link">21/09/29 水族館</div>
+            </li>
+            <li class="list_list">
+                <a href="210929_marinpia.html" class="list_link">1</a>
+            </li>
+            <li class="list_list">
+                <a href="210929_marinpia2.html" class="list_link">2</a>
+            </li>
+        </ul>
 
         <details>
             <summary>
