--- a/210928_yonezawa.html
+++ b/210928_yonezawa.html
@@ -17,7 +17,7 @@
         <div class="footer">
             <div class="page"><a href="210915_onsen.html">prev</a></div>
             <div class="page"><a href="index.html">top</a></div>
-            <div class="page"><a href="index.html">next</a></div>
+            <div class="page"><a href="210929_marinpia.html">next</a></div>
         </div>
         <h3 class="h3-b">
             2021/09/28 夕方
