--- a/index.html
+++ b/index.html
@@ -482,6 +482,16 @@
                 <a href="210929_marinpia2.html" class="list_link">2</a>
             </li>
         </ul>
+        <ul class="list">
+            <li class="list_list">
+                <a href="211003_hotel.html" class="list_link">21/10/03 ラブホテル</a>
+            </li>
+        </ul>
+        <ul class="list">
+            <li class="list_list">
+                <a href="211007_saize.html" class="list_link">21/10/07 ファミレス</a>
+            </li>
+        </ul>
 
         <details>
             <summary>
