--- a/index.html
+++ b/index.html
@@ -492,7 +492,11 @@
                 <a href="211007_saize.html" class="list_link">21/10/07 ファミレス</a>
             </li>
         </ul>
-
+        <ul class="list">
+            <li class="list_list">
+                <a href="211013.html" class="list_link">21/10/13 八崎到着前日</a>
+            </li>
+        </ul>
         <details>
             <summary>
                 <h2 class="index_h2">-SS-</h2>
