--- a/201028_mitsubd.html
+++ b/201028_mitsubd.html
@@ -1025,13 +1025,7 @@
         温水が身体に掛かって、その温もりにか小さくほうと息をつく。
             </div>
         </div>
-        <div class="main">
-            <div class="ic"><img src="img/usersXhqo0TufgPQTTcIOmMRpf7l9LSf1filesd181cc1d4bd15c6546874f.png"></div>
-            <div class="p">
-                <b class="mitsu">夜高ミツル</b><br>
-
-            </div>
-        </div>
+ <img src="img/hana.svg" class="hana">
         <div class="main">
             <div class="ic"><img src="img/usersXhqo0TufgPQTTcIOmMRpf7l9LSf1filesd181cc1d4bd15c6546874f.png"></div>
             <div class="p">
@@ -1497,13 +1491,7 @@
         その間も静かに涙を落としていた。
             </div>
         </div>
-        <div class="main">
-            <div class="ic"><img src="img/usersXhqo0TufgPQTTcIOmMRpf7l9LSf1filesd181cc1d4bd15c6546874f.png"></div>
-            <div class="p">
-                <b class="mitsu">夜高ミツル</b><br>
-
-            </div>
-        </div>
+<img src="img/hana.svg" class="hana">
         <div class="main">
             <div class="ic"><img src="img/usersXhqo0TufgPQTTcIOmMRpf7l9LSf1filesd181cc1d4bd15c6546874f.png"></div>
             <div class="p">
